# statrs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.MSRV  Cargo.toml  LICENSE.md  README.md  prep_data.sh  rustfmt.toml
.github/workflows/: coverage.yml  test.yml
benches/: order_statistics.rs
src/: .travis.yml  consts.rs  error.rs  euclid.rs  generate.rs  lib.rs  prec.rs  result.rs  statistics.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  cauchy.rs  chi.rs  chi_squared.rs  chisquared.rs  dirac.rs  dirichlet.rs  discrete_uniform.rs  empirical.rs  erlang.rs  exponential.rs  fisher_snedecor.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  internal.rs  inverse_gamma.rs  laplace.rs  levy.rs  log_normal.rs  lognormal.rs  mod.rs  multinomial.rs  multivariate_normal.rs  multivariate_students_t.rs  negative_binomial.rs  normal.rs  pareto.rs  poisson.rs  student_t.rs  students_t.rs  triangular.rs  uniform.rs  weibull.rs  ziggurat.rs  ziggurat_tables.rs
src/function/: beta.rs  erf.rs  evaluate.rs  exponential.rs  factorial.rs  gamma.rs  harmonic.rs  internal.rs  logistic.rs  mod.rs  stable.rs
src/functions/: beta.rs  erf.rs  evaluate.rs  factorial.rs  gamma.rs  mod.rs
src/statistics/: inplace_statistics.rs  iter_statistics.rs  mod.rs  order_statistics.rs  slice_statistics.rs  statistics.rs  stream_statistics.rs  traits.rs
src/stats_tests/: chisquare.rs  f_oneway.rs  fisher.rs  ks_test.rs  mannwhitneyu.rs  mod.rs  skewtest.rs  ttest_onesample.rs
src/testing/: mod.rs
tests/: gather_nist_data.sh  nist_tests.rs
