[package]

name = "statrs"
version = "0.17.1"
authors = ["Michael Ma"]
description = "Statistical computing library for Rust"
license = "MIT"
keywords = ["probability", "statistics", "stats", "distribution", "math"]
categories = ["science"]
homepage = "https://github.com/statrs-dev/statrs"
repository = "https://github.com/statrs-dev/statrs"
edition = "2021"

include = ["CHANGELOG.md", "LICENSE.md", "src/", "tests/"]

[lib]
name = "statrs"
path = "src/lib.rs"

[features]
default = ["nalgebra"]
nalgebra = ["dep:nalgebra"]

[dependencies]
rand = "0.8"
approx = "0.5.0"
num-traits = "0.2.14"

[dependencies.nalgebra]
version = "0.32"
optional = true
default-features = false
features = ["rand", "std"]

[dev-dependencies]
criterion = "0.3.3"
anyhow = "1.0"

[dev-dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["macros"]
